create custom auth pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .input-field {
+    @apply w-full border-slate-300 border-2 rounded-md px-3 py-2  focus:outline-none focus:border-slate-500;
+  }
+}
